--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "dev": "webpack serve --mode development --env development --hot"
+    "dev": "webpack serve --mode development --env development --hot",
+    "build": "webpack --mode production",
+    "start": "npm run build & serve -s ./build"
   },
   "repository": {
     "type": "git",
