--- a/package.json
+++ b/package.json
@@ -28,10 +28,19 @@
   "homepage": "https://github.com/Niyiragira/CodeWithNellySugu-Challenge2#readme",
   "dependencies": {
     "@babel/runtime": "^7.14.6",
+    "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-loading-skeleton": "^2.2.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
     "serve": "^12.0.0",
@@ -46,6 +55,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.1.0",
     "html-webpack-plugin": "^5.3.2"
   }
